<resources>
    <string name="app_name">Rate Film</string>
    <string name="poster_description">Постер фильма</string>
    <string name="search_hint">Поиск</string>
    <string name="film_rating">Рейтинг:</string>
    <string name="reviews">Отзывы:</string>
    <string name="your_review_hint">Ваш отзыв:</string>
    <string name="text_review_hint">Опишите Ваши впечатления от фильма</string>
    <string name="rate_film">Оцените фильм</string>
    <string name="save">Сохранить</string>
    <string name="fantasy">Фантастика</string>
    <string name="action">Боевики</string>
    <string name="thriller">Триллеры</string>
    <string name="loading">Загрузка…</string>
    <string name="account">Аккаунт</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="drawer_layout_description">Drawer Layout</string>
    <string name="button_description">Open navigation menu</string>
    <string name="liked_films">Избранное</string>
    <string name="user_left_review">Вы оставили отзыв</string>
    <string name="result_of_search">Результат поиска по запросу: %1$s</string>
    <string name="delete_review">Удалить отзыв</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="film_added_success">Фильм добавлен в избранное</string>
    <string name="film_deleted_success">Фильм успешно удалён из избранного</string>
    <string name="review_added_success">Отзыв успешно добавлен</string>
    <string name="review_deleted_success">Отзыв успешно удалён</string>
    <string name="enter_rate">Введите оценку фильму</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="delete_from_favorite">Удалить из избранного</string>
    <string name="edit_review">Редактировать отзыв</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="no_reviews">Нет оценок</string>
    <string name="request_fail">Не удалось выполнить запрос</string>
    <string name="enter_all_fields">Пожалуйста, заполните все поля</string>
    <string name="try_again">Произошла ошибка, попробуйте снова</string>
    <string name="registration_success">Вы успешно зарегистрировались</string>
    <string name="username_already_exists">Пользователь с таким именем уже существует</string>
    <string name="invalid_symbols">В почте не должно быть символов: . # $ [ ]</string>
</resources>